# InstMan

./: get_cookie.py  instman.py  pyproject.toml  requirements.txt
src/: args_format.py  instman.py  postdata.py
